--- a/Happy-Birthday--Tree-main/index.html
+++ b/Happy-Birthday--Tree-main/index.html
@@ -31,11 +31,11 @@
                 <div id="text">
                     <div id="code">
                       <span class="say"> Happiest Birthday Harshita </span><br>
-                      <span class="say"> Beautiful🫀 </span><br>             
+                      <span class="say"> Beautiful Girl🫀 </span><br>             
                       <span class="say">I HOPE U GET</span><br>
                       <span class="say">ALL THE LOVE🥰</span><br>
                       <span class="say">THAT YOU DESERVE💕</span><br>
-                      <span class="say">Your Friend Aman🫶! </span><br>
+                      <span class="say">Your True Friend Aman🫶! </span><br>
                       <span class="say"><span class="space"></span></span> </font>
                           <br />
                           <br />
